fix introjs-tooltip not showing on some platforms

--- a/css/custom-introjs.css
+++ b/css/custom-introjs.css
@@ -39,7 +39,6 @@
   display: flex;
   align-items: center;
   gap: .75rem;
-
 }
 
 .customTooltip .introjs-skipbutton {
@@ -60,7 +59,7 @@
   content: "";
   margin-right: 6px;
   background-image: url(../icons/go-right.svg);
-  filter:invert(1);
+  filter: invert(1);
   width: 20px;
   height: 20px;
   background-size: 20px 20px;
@@ -70,7 +69,7 @@
   content: "";
   margin-right: 6px;
   background-image: url(../icons/go-left.svg);
-  filter:invert(1);
+  filter: invert(1);
   width: 20px;
   height: 20px;
   background-size: 20px 20px;
@@ -118,4 +117,9 @@
   -webkit-box-shadow: 0 0 0 0rem rgba(158, 158, 158, 0.5);
   box-shadow: 0 0 0 0rem rgba(158, 158, 158, 0.5);
   border: 0px;
+}
+
+/* see: https://www.devgem.io/posts/solving-tooltip-display-issues-with-rintrojs-in-safari*/
+.introjs-tooltipReferenceLayer {
+  visibility: visible;
 }
